--- a/tmux/core.conf
+++ b/tmux/core.conf
@@ -6,6 +6,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
+set -g mouse on
 setw -g mode-keys vi
 
 # Sorts sessions by alphabetical order
